--- a/MPILabs/MPILabs.vcxproj.filters
+++ b/MPILabs/MPILabs.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="Lab2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Lab5.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
