--- a/MPILabs/MPILabs.vcxproj.filters
+++ b/MPILabs/MPILabs.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Lab5.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Lab6.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
